--- a/index.html
+++ b/index.html
@@ -3,49 +3,56 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>⚡ Astra Fit AI</title>
+  <title>⚡️ Astra Fit AI</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f7fb;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: #f0f2f5;
       margin: 0;
       padding: 0;
     }
-    .container {
-      max-width: 600px;
-      margin: auto;
-      padding: 20px;
-    }
-    h1 {
+    header {
+      background: white;
+      padding: 15px;
       text-align: center;
+      font-size: 22px;
+      font-weight: bold;
       color: #0056d6;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .container {
+      max-width: 500px;
+      margin: 20px auto;
+      padding: 0 15px;
     }
     .card {
       background: white;
-      border-radius: 12px;
+      border-radius: 16px;
       padding: 20px;
       margin-bottom: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.08);
     }
     .card h2 {
+      font-size: 18px;
       margin-top: 0;
+      margin-bottom: 12px;
     }
     textarea, input, select {
       width: 100%;
-      padding: 10px;
-      margin-top: 8px;
+      padding: 12px;
+      margin-top: 10px;
       border: 1px solid #ddd;
-      border-radius: 6px;
+      border-radius: 12px;
       font-size: 16px;
     }
     button {
       width: 100%;
-      padding: 12px;
-      margin-top: 12px;
+      padding: 14px;
+      margin-top: 14px;
       background: #007bff;
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 12px;
       font-size: 16px;
       cursor: pointer;
     }
@@ -53,19 +60,21 @@
       background: #0056b3;
     }
     .response {
-      margin-top: 12px;
-      padding: 10px;
-      background: #f1f1f1;
-      border-radius: 6px;
+      margin-top: 14px;
+      padding: 12px;
+      background: #f9f9f9;
+      border-radius: 12px;
       min-height: 40px;
+      font-size: 15px;
+      line-height: 1.4;
       white-space: pre-wrap;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>⚡️ Astra Fit AI</h1>
+  <header>⚡️ Astra Fit AI</header>
 
+  <div class="container">
     <!-- Coach AI -->
     <div class="card">
       <h2>🤖 Coach AI</h2>
