--- a/index.html
+++ b/index.html
@@ -1,151 +1,213 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>⚡️ Astra Fit AI</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Astra Fit</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background: #f0f2f5;
       margin: 0;
       padding: 0;
+      background-color: #f5f5f7;
+      color: #111;
     }
     header {
-      background: white;
-      padding: 15px;
       text-align: center;
-      font-size: 22px;
-      font-weight: bold;
-      color: #0056d6;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      padding: 2rem 1rem 1rem;
     }
-    .container {
-      max-width: 500px;
-      margin: 20px auto;
-      padding: 0 15px;
+    header h1 {
+      font-size: 1.8rem;
+      font-weight: 700;
+      margin: 0.5rem 0 0.3rem;
+    }
+    header p {
+      font-size: 0.95rem;
+      color: #444;
+      margin: 0;
     }
     .card {
-      background: white;
+      background: #fff;
       border-radius: 16px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.08);
+      padding: 1.5rem;
+      margin: 1rem auto;
+      max-width: 600px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
     }
-    .card h2 {
-      font-size: 18px;
-      margin-top: 0;
-      margin-bottom: 12px;
+    h2 {
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
     }
-    textarea, input, select {
+    input, select, textarea, button {
       width: 100%;
-      padding: 12px;
-      margin-top: 10px;
+      padding: 0.75rem;
+      margin: 0.4rem 0;
       border: 1px solid #ddd;
-      border-radius: 12px;
-      font-size: 16px;
+      border-radius: 8px;
+      font-size: 1rem;
     }
     button {
-      width: 100%;
-      padding: 14px;
-      margin-top: 14px;
-      background: #007bff;
-      color: white;
+      background: #111;
+      color: #fff;
+      font-weight: 600;
       border: none;
-      border-radius: 12px;
-      font-size: 16px;
       cursor: pointer;
     }
     button:hover {
-      background: #0056b3;
+      background: #333;
     }
-    .response {
-      margin-top: 14px;
-      padding: 12px;
-      background: #f9f9f9;
-      border-radius: 12px;
-      min-height: 40px;
-      font-size: 15px;
-      line-height: 1.4;
-      white-space: pre-wrap;
+    .result {
+      margin-top: 1rem;
+      padding: 1rem;
+      background: #f5f5f7;
+      border-radius: 8px;
+      font-size: 0.95rem;
+      color: #111;
+      white-space: pre-line;
     }
   </style>
 </head>
 <body>
-  <header>⚡️ Astra Fit AI</header>
 
-  <div class="container">
-    <!-- Coach AI -->
-    <div class="card">
-      <h2>🤖 Coach AI</h2>
-      <textarea id="userInput" placeholder="Scrivi la tua domanda di fitness..."></textarea>
-      <button onclick="askAI()">Chiedi</button>
-      <div id="aiResponse" class="response"></div>
-    </div>
+  <header>
+    <div style="font-size:2.5rem;">⭐</div>
+    <h1>Astra Fit</h1>
+    <p>Calcolo del fabbisogno, macro, allenamento e assistenza AI.</p>
+    <p style="font-size:0.85rem; color:#666;">© Astra Fit • a cura di Fabio Muraca</p>
+  </header>
 
-    <!-- Calcolatore Calorie -->
-    <div class="card">
-      <h2>🔥 Calcolatore Calorie</h2>
-      <input type="number" id="peso" placeholder="Peso (kg)">
-      <input type="number" id="altezza" placeholder="Altezza (cm)">
-      <input type="number" id="eta" placeholder="Età">
-      <select id="sesso">
-        <option value="uomo">Uomo</option>
-        <option value="donna">Donna</option>
-      </select>
-      <input type="number" id="attivita" placeholder="Livello attività (1.2 - 1.9)">
-      <button onclick="calcolaCalorie()">Calcola</button>
-      <div id="calorieResult" class="response"></div>
-    </div>
+  <!-- Coach AI -->
+  <div class="card">
+    <h2>🤖 Coach AI</h2>
+    <textarea id="userQuestion" placeholder="Scrivi la tua domanda di fitness..."></textarea>
+    <button onclick="askAI()">Chiedi</button>
+    <div id="aiResponse" class="result" style="display:none;"></div>
+  </div>
+
+  <!-- Calcolatore Calorie & Macro -->
+  <div class="card">
+    <h2>🔥 Calcolo calorie & macro</h2>
+    <label>Sesso</label>
+    <select id="gender">
+      <option value="male">Maschio</option>
+      <option value="female">Femmina</option>
+    </select>
+    <label>Età (anni)</label>
+    <input type="number" id="age">
+    <label>Peso (kg)</label>
+    <input type="number" id="weight">
+    <label>Altezza (cm)</label>
+    <input type="number" id="height">
+    <label>Attività</label>
+    <select id="activity">
+      <option value="1.2">Sedentario (1–2 allen./sett.)</option>
+      <option value="1.55">Moderato (3–4 allen./sett.)</option>
+      <option value="1.75">Intenso (5–6 allen./sett.)</option>
+    </select>
+    <label>Obiettivo</label>
+    <select id="goal">
+      <option value="-500">Definizione (-500 kcal)</option>
+      <option value="0">Mantenimento</option>
+      <option value="300">Massa (+300 kcal)</option>
+    </select>
+    <label>Proteine (g/kg)</label>
+    <input type="number" id="protein" value="2">
+    <button onclick="calculateCalories()">Calcola</button>
+    <div id="calorieResult" class="result" style="display:none;"></div>
+  </div>
+
+  <!-- Training Planner -->
+  <div class="card">
+    <h2>🏋️ Training Planner</h2>
+    <p style="font-size:0.9rem; color:#444;">Genera un piano di allenamento personalizzato con l'AI in base ai tuoi dati.</p>
+    <button onclick="generateTraining()">Genera piano</button>
+    <div id="trainingPlan" class="result" style="display:none;"></div>
   </div>
 
   <script>
-    // Funzione AI
+    // === Coach AI ===
     async function askAI() {
-      const input = document.getElementById("userInput").value;
-      const responseBox = document.getElementById("aiResponse");
-      responseBox.textContent = "⏳ Sto pensando...";
-
+      const question = document.getElementById("userQuestion").value.trim();
+      const responseDiv = document.getElementById("aiResponse");
+      if (!question) return;
+      responseDiv.style.display = "block";
+      responseDiv.textContent = "Sto pensando...";
       try {
-        const res = await fetch("https://astra-fit-ai.fabiomuraca.workers.dev/", {
+        const res = await fetch("https://astra-fit-ai.fabiomuraca.workers.dev/ask", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ query: input })
+          body: JSON.stringify({ question })
         });
-
-        if (!res.ok) throw new Error("Errore server");
-
         const data = await res.json();
-        responseBox.textContent = data.answer || "⚠️ Nessuna risposta ricevuta.";
-      } catch (err) {
-        responseBox.textContent = "❌ Errore nella risposta.";
+        responseDiv.textContent = data.answer || "Errore nella risposta.";
+      } catch {
+        responseDiv.textContent = "Errore di connessione.";
       }
     }
 
-    // Calcolatore calorie
-    function calcolaCalorie() {
-      const peso = parseFloat(document.getElementById("peso").value);
-      const altezza = parseFloat(document.getElementById("altezza").value);
-      const eta = parseFloat(document.getElementById("eta").value);
-      const sesso = document.getElementById("sesso").value;
-      const attivita = parseFloat(document.getElementById("attivita").value);
+    // === Calcolatore ===
+    function calculateCalories() {
+      const gender = document.getElementById("gender").value;
+      const age = parseInt(document.getElementById("age").value);
+      const weight = parseFloat(document.getElementById("weight").value);
+      const height = parseFloat(document.getElementById("height").value);
+      const activity = parseFloat(document.getElementById("activity").value);
+      const goal = parseInt(document.getElementById("goal").value);
+      const protein = parseFloat(document.getElementById("protein").value);
 
-      if (isNaN(peso) || isNaN(altezza) || isNaN(eta) || isNaN(attivita)) {
-        document.getElementById("calorieResult").textContent = "⚠️ Compila tutti i campi.";
+      if (!age || !weight || !height) {
+        alert("Compila tutti i campi!");
         return;
       }
 
       let bmr;
-      if (sesso === "uomo") {
-        bmr = 88.36 + (13.4 * peso) + (4.8 * altezza) + (5.7 * eta);
+      if (gender === "male") {
+        bmr = 10 * weight + 6.25 * height - 5 * age + 5;
       } else {
-        bmr = 447.6 + (9.2 * peso) + (3.1 * altezza) - (4.3 * eta);
+        bmr = 10 * weight + 6.25 * height - 5 * age - 161;
       }
 
-      const tdee = bmr * attivita;
-      document.getElementById("calorieResult").textContent = 
-        `🍽️ Fabbisogno calorico giornaliero: ~${Math.round(tdee)} kcal`;
+      const tdee = bmr * activity;
+      const calories = tdee + goal;
+      const proteins = protein * weight;
+      const fats = (0.25 * calories) / 9;
+      const carbs = (calories - (proteins * 4 + fats * 9)) / 4;
+
+      document.getElementById("calorieResult").style.display = "block";
+      document.getElementById("calorieResult").innerHTML = `
+        🔹 Fabbisogno: <b>${Math.round(calories)}</b> kcal<br>
+        🍗 Proteine: <b>${Math.round(proteins)}</b> g<br>
+        🥑 Grassi: <b>${Math.round(fats)}</b> g<br>
+        🍚 Carboidrati: <b>${Math.round(carbs)}</b> g
+      `;
+    }
+
+    // === Training Planner con AI ===
+    async function generateTraining() {
+      const age = document.getElementById("age").value;
+      const weight = document.getElementById("weight").value;
+      const activity = document.getElementById("activity").options[document.getElementById("activity").selectedIndex].text;
+      const goal = document.getElementById("goal").options[document.getElementById("goal").selectedIndex].text;
+
+      const prompt = `Genera un piano di allenamento settimanale per una persona di ${age} anni, ${weight} kg, livello: ${activity}, obiettivo: ${goal}. Usa un formato semplice e leggibile con giorni ed esercizi.`;
+
+      const trainingDiv = document.getElementById("trainingPlan");
+      trainingDiv.style.display = "block";
+      trainingDiv.textContent = "Creo il tuo piano...";
+
+      try {
+        const res = await fetch("https://astra-fit-ai.fabiomuraca.workers.dev/ask", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ question: prompt })
+        });
+        const data = await res.json();
+        trainingDiv.textContent = data.answer || "Errore nella risposta.";
+      } catch {
+        trainingDiv.textContent = "Errore di connessione.";
+      }
     }
   </script>
+
 </body>
 </html>
